@@ -554,15 +554,6 @@ int stasis_app_control_unmute(struct stasis_app_control *control, unsigned int d
 int stasis_app_control_answer(struct stasis_app_control *control);
 
 /*!
- * \brief Get the value of a variable on the channel associated with this control.
- * \param control Control for \c res_stasis.
- * \param variable The name of the variable.
- *
- * \return The value of the variable.  The returned variable must be freed.
- */
-char *stasis_app_control_get_channel_var(struct stasis_app_control *control, const char *variable);
-
-/*!
  * \brief Set a variable on the channel associated with this control to value.
  * \param control Control for \c res_stasis.
  * \param variable The name of the variable
